style: remove blank spaces